--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="keys">
             <button onclick="appendToDisplay('7')">7
             </button>
-            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('8')">8
+            </button>
             <button onclick="appendToDisplay('9')">9</button>
             <button onclick="appendToDisplay('+')">+</button>
             <button onclick="appendToDisplay('4')">4</button>
